test_suite/alan-2022-examples/failing/002040_mutation.alan
source t begin get i . end
